# AndroidCameraRecord

./: .gitignore  README.md  build.gradle  import-summary.txt  local.properties
app/: CMakeLists.txt  build.gradle
app/debug/: camcodec.apk
app/release/: camcodec.apk  hcvs.jks
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  ndkcamera.cpp  ndkcamera.h  yoloface.cpp  yolofacencnn.cpp
app/src/main/java/com/van/camencode/: AutoFitTextureView.java  CItem.java  Camera2Activity.java  CameraRGBActivity.java  CameraXActivity.java  CameraYUVOpenGL.java  MainActivity.java  MyView.java  OpenglCameraActivity.java  OpenglCameraActivity2.java  PhotoPop.java  RecordActivity.java  SurfaceTextureActivity.java  TestActivity.java  WellcomActivity.java
app/src/main/java/com/van/ncnn/: NcnnYoloFace.java
app/src/main/java/com/van/opencv/: Face.java  FaceTracker.java  YUVData.java
app/src/main/java/com/van/opengl/: CameraSurface.java  EGLEnv.java  GLRender.java  (+12 more)
app/src/main/res/layout/: activity_camera_rgbactivity.xml  activity_camera_x.xml  activity_camera_yuv_opengl.xml  activity_main.xml  activity_opengl2_camera.xml  activity_opengl_camera.xml  activity_record.xml  activity_surface_texture.xml  activity_wellcome.xml  pop_photo.xml
app/src/main/res/menu/: main.xml
app/src/main/res/raw/: base_frag.frag  base_vert.vert  camera_frag.frag  camera_vert.vert  mosaics_frag.frag  soul_frag.frag  split2_screen.frag  split3_screen.frag  yuv_fragment2.glsl  yuv_vertex2.glsl
app/src/main/res/values/: strings.xml
gradle/wrapper/: gradle-wrapper.properties
(+30 files in other folders)
